hphp/hack/test/typecheck/reactive/references_in_rx3.php.exp
File "references_in_rx3.php", line 6, characters 13-17:
References are not allowed in reactive code. (Naming[2088])
