hphp/hack/test/typecheck/reactive/references_in_rx3.php
<?hh

<<__Rx>>
function foo(): void {
  $foo = 'f';
  $z = call(&$foo); // bad
}
